--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
+
 {
+  "homepage": "https://GUNA9894643135.github.io/guna_kairaa",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
